Profiles added More tweaks

--- a/HelpFiles/index.html
+++ b/HelpFiles/index.html
@@ -74,6 +74,14 @@
             <td valign="top" align="center">rFactor 2<br>
             </td>
           </tr>
+          <tr>
+            <td valign="top" align="center">DiRT Rally<br>
+            </td>
+            <td valign="top" align="center">DiRT Rally 2.0<br>
+            </td>
+            <td valign="top" align="center">GTR 2<br>
+            </td>
+          </tr>
         </tbody>
       </table>
       <br>
@@ -90,6 +98,7 @@
       <br>
       There is an <b>Android </b>version for Project Cars 1and 2 on <a
 href="https://play.google.com/store/apps/details?id=com.britton_it_ltd.crewchief.full&amp;gl=GB">Google
+
 
 
         Play</a><br>
