--- a/HelpFiles/menu.html
+++ b/HelpFiles/menu.html
@@ -51,6 +51,8 @@
 
 
                       Corsa Competizione</span></a></li>
+                <li><a
+                    href="GettingStarted_GameSpecific_GTR2.html"><span>GTR 2</span></a></li>
                 <li><a href="GettingStarted_GameSpecific_F1_2018.html"
                     title="Also F1 2018 and 2019"><span>F1 2020</span></a></li>
                 <li><a href="GettingStarted_GameSpecific_iRacing.html"><span>iRacing</span></a></li>
