--- a/public/GettingStarted_GameSpecific_GTR2.html
+++ b/public/GettingStarted_GameSpecific_GTR2.html
@@ -240,12 +240,15 @@
     </div>
     <br>
     <div style="font-family:'Lucida Sans Unicode';font-size:13px;" class="main">
-          Written by Jim Britton, Morten Roslev, Vytautas Leonavi&#x010D;ius, Paul Burgess, Tony Whitley, Dan Allongo (Automobilista and rFactor1 implementation), Daniel Nowak (nAudio speech recognition port), Mike Schreiner and Brent Owen (technical input on stock car rules). The application is the result of lots of lots of hard work and input from the guys above as well as some great advice and support from the community and the guys at Sector3 and SMS.<br>
-          <br>
-          Additional material from Scoops (fantastic track layout mapping work), Nolan Bates (conversion of thousands of phrases from speech to text for subtitle support) and Longtomjr (F1 2018 UDP data format structs). Fantastic alternate spotter sounds by Geoffrey Lessel, Matt Orr (aka EmptyBox), Clare Britton, Mike Schreiner, Phil Linden, Lee Taylor and Micha (last name?). Also a thank you to Nick Thissen for his work on iRacingSdkWrapper.  Rally mode was created in collaboration with Janne Laahanen, who contributed his co-driver pack and helped in understanding the RBR pacenotes.<br>
-          <br>
-          Help files created by Tony Whitley from the original text content.<br>
-      </div>
+      See this post on the forum:
+      <br>
+      <a href="http://thecrewchief.org/showthread.php?2012-GTR2-Setup-Instructions-and-Known-Issues">http://thecrewchief.org/showthread.php?2012-GTR2-Setup-Instructions-and-Known-Issues</a><br>
+      <br>
+      If you have a DVD version of GTR 2 you <i>may </i>be able to use
+      the CD key to register the Steam version.<br>
+      <a href="https://support.steampowered.com/kb_article.php?s=3593ea91d4f906893707c13113c63594&amp;ref=7480-WUSF-3601">Steam
+        Support - Retail CD Keys</a><br>
+    </div>
     <hr width="100%" size="2">
     <table style="font-family:'Lucida Sans Unicode';font-size:13px;" width="100%" cellspacing="0" cellpadding="0" border="0">
       <tbody>
