--- a/public/index.html
+++ b/public/index.html
@@ -48,6 +48,7 @@
 
 
                       Corsa Competizione</span></a></li>
+                <li><a href="GettingStarted_GameSpecific_GTR2.html"><span>GTR 2</span></a></li>
                 <li><a href="GettingStarted_GameSpecific_F1_2018.html" title="Also F1 2018 and 2019"><span>F1 2020</span></a></li>
                 <li><a href="GettingStarted_GameSpecific_iRacing.html"><span>iRacing</span></a></li>
                 <li><a href="GettingStarted_GameSpecific_ProjectCars.html"><span>Project
@@ -296,6 +297,14 @@
             <td valign="top" align="center">rFactor 2<br>
             </td>
           </tr>
+          <tr>
+            <td valign="top" align="center">DiRT Rally<br>
+            </td>
+            <td valign="top" align="center">DiRT Rally 2.0<br>
+            </td>
+            <td valign="top" align="center">GTR 2<br>
+            </td>
+          </tr>
         </tbody>
       </table>
       <br>
@@ -310,6 +319,7 @@
       The CrewChiefV4 installer can be found <a href="http://thecrewchief.org/forum.php">via the forum</a>. <br>
       <br>
       There is an <b>Android </b>version for Project Cars 1and 2 on <a href="https://play.google.com/store/apps/details?id=com.britton_it_ltd.crewchief.full&amp;gl=GB">Google
+
 
 
         Play</a><br>
