--- a/public/About_ChangeLog.html
+++ b/public/About_ChangeLog.html
@@ -48,6 +48,7 @@
 
 
                       Corsa Competizione</span></a></li>
+                <li><a href="GettingStarted_GameSpecific_GTR2.html"><span>GTR 2</span></a></li>
                 <li><a href="GettingStarted_GameSpecific_F1_2018.html" title="Also F1 2018 and 2019"><span>F1 2020</span></a></li>
                 <li><a href="GettingStarted_GameSpecific_iRacing.html"><span>iRacing</span></a></li>
                 <li><a href="GettingStarted_GameSpecific_ProjectCars.html"><span>Project
@@ -239,6 +240,25 @@
     </div>
     <br>
     <div style="font-family:'Lucida Sans Unicode';font-size:13px;" class="main">
+<h2>Version 4.15.0.3</h2>
+<ul>
+	<li>Some timing accuracy improvements where opponent data is incomplete</li>
+	<li>RBR / Dirt / Dirt 2 - ensure corner / obstacle modifiers apply to the correct pace note fragment and fixed issue with pace note corrections not working</li>
+	<li>GTR2 - improved plugin handling</li>
+	<li>RF2 - pit menu tyre type matching improvements</li>
+</ul>
+<h2>Version 4.15.0.2</h2>
+<ul>
+	<li>R3E - hotfix for error when the player has no rating data (i.e. has never raced on one of the official ranked servers)</li>
+</ul>
+<h2>Version 4.15.0.1</h2>
+<ul>
+	<li>Added full support for GTR2, see <a href="http://thecrewchief.org/showthread.php?2012-GTR2-Setup-Instructions-and-Known-Issues&p=8180#post8180">forum post</a> for installation and setup instructions. Note that this also includes full (native) VR support for GTR2 (see the link for details)</li>
+	<li>R3E - added rating-based finishing position expectation messages and voice command ("what's my expected finish position?"). The rating data also affects the race-end messages</li>
+	<li>RBR / Dirt / Dirt2 - rally stage notes creation improvements - added "into", "and" and "then" items, added "tightens to [1/2/3/4/5/hairpin]" command, ensure pace notes are ordered correctly, some other fixes and improvements</li>
+	<li>iRacing - added sanity checks to opponent speed and position data, should reduce the number of spurious stopped-car calls</li>
+	<li>Various bug fixes</li>
+</ul>
 <h2>Version 4.14.0.6</h2>
 <ul>
 	<li>Fixed 'force single class' option (was being ignored by the app)</li>
