Help files: add rF2 MFD commands

--- a/HelpFiles/VoiceRecognition_VoiceCommandsGrouped.html
+++ b/HelpFiles/VoiceRecognition_VoiceCommandsGrouped.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="styles.css">
     <script src="jquery-latest.min.js" type="text/javascript"></script>
     <script src="script.js"></script>
+    <title></title>
   </head>
   <body vlink="#551A8B" text="#000000" link="#0000EE" bgcolor="#dddddd"
     alink="#EE0000">
@@ -343,6 +344,16 @@
       &nbsp;&nbsp;&nbsp;What's my incident count<br>
       What's the incident limit<br>
       <br>
+      <h2>rFactor 2</h2>
+      <i>Select Multi-Function Display screen</i><br>
+      Display<br>
+      &nbsp; sectors / sector times<br>
+      &nbsp; pit menu<br>
+      &nbsp; tyres<br>
+      &nbsp; temps / temperatures<br>
+      &nbsp; race info<br>
+      &nbsp; standings<br>
+      &nbsp; penalties<br>
       <br>
     </div>
   </body>
