--- a/public/VoiceRecognition_VoiceCommandsGrouped.html
+++ b/public/VoiceRecognition_VoiceCommandsGrouped.html
@@ -570,6 +570,16 @@
       &nbsp;&nbsp;&nbsp;What's my incident count<br>
       What's the incident limit<br>
       <br>
+      <h2>rFactor 2</h2>
+      <i>Select Multi-Function Display screen</i><br>
+      Display<br>
+      &nbsp; sectors / sector times<br>
+      &nbsp; pit menu<br>
+      &nbsp; tyres<br>
+      &nbsp; temps / temperatures<br>
+      &nbsp; race info<br>
+      &nbsp; standings<br>
+      &nbsp; penalties<br>
       <br>
     </div>
     <hr width="100%" size="2">
