--- a/HelpFiles/GameSpecific_ForEachGame_GTR2.html
+++ b/HelpFiles/GameSpecific_ForEachGame_GTR2.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="">
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
@@ -13,6 +13,7 @@
 <div style="font-family:'Lucida Sans Unicode';font-size:13px;" class="main">
 <br>
 </div>
+
 
 </body>
 </html>
