--- a/change_log_for_auto_updated.html
+++ b/change_log_for_auto_updated.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html>
 <body>
+<h2>Version 4.15.0.5</h2>
+<ul>
+	<li>Added speech recogniser debug function (enable with 'Write speech recognition debug data' property) - writes recognition information and captured audio as a .wav file to Documents/CrewChiefV4/voiceRecognitionDebug/</li>
+	<li>RBR / Dirt / Dirt 2 - fixed a few bugs in the recce pace notes parser</li>
+	<li>GTR2 - fixed missing speech recognition commands</li>
+	<li>GTR2 - fixed missing reflections in VR</li>
+	<li>RF2 - pit menu manager improvements</li>
+	<li>Minor bugfixes</li>
+</ul>
 <h2>Version 4.15.0.3</h2>
 <ul>
 	<li>Some timing accuracy improvements where opponent data is incomplete</li>
