--- a/change_log_for_auto_updated.html
+++ b/change_log_for_auto_updated.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html>
 <body>
+<h2>Version 4.15.0.6</h2>
+<ul>
+	<li>Some error handling improvements - the app should show a popup window with error details instead of silently crashing and writing to the Windows Event Log</li>
+	<li>Command line parameter rework (note that the "RF2_64BIT" parameter has been changed to "RF2")</li>
+	<li>iRacing - some car class fixes</li>
+</ul>
 <h2>Version 4.15.0.5</h2>
 <ul>
 	<li>Added speech recogniser debug function (enable with 'Write speech recognition debug data' property) - writes recognition information and captured audio as a .wav file to Documents/CrewChiefV4/voiceRecognitionDebug/</li>
