--- a/change_log_for_auto_updated.html
+++ b/change_log_for_auto_updated.html
@@ -6,6 +6,7 @@
 	<li>Some error handling improvements - the app should show a popup window with error details instead of silently crashing and writing to the Windows Event Log</li>
 	<li>Command line parameter rework (note that the "RF2_64BIT" parameter has been changed to "RF2")</li>
 	<li>iRacing - some car class fixes</li>
+	<li>iRacing - fix some issues with off track penalties</li>
 </ul>
 <h2>Version 4.15.0.5</h2>
 <ul>
