--- a/change_log_for_auto_updated.html
+++ b/change_log_for_auto_updated.html
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
 <html>
 <body>
+<h2>Version 4.15.1.0</h2>
+<ul>
+	<li>Added a configurable delay after releasing the speech recognition button before finishing speech recognition - may help users who tend to release the button too early ('hold button' mode only, property name 'SRE delay after button release')</li>
+	<li>Allow keyboard and button assignments to trigger macro functions and extended the Macro Editor UI to support key / button assignments</li>
+	<li>Speeded up free-chat macro functions</li>
+	<li>Extended mid-stage rally stage notes correction feature to include many more call types</li>
+	<li>UI enhancements (console context menu and other stuff)</li>
+	<li>AMS2 - use separate command macros for AMS2 rather than reusing pCars2 macros</li>
+	<li>GTR2 - VR rendering enhancements and support for more message types including rolling start</li>
+	<li>RF2 - pit menu fixes</li>
+</ul>
 <h2>Version 4.15.0.6 </h2>
 <ul>
 	<li>Some error handling improvements - the app should show a popup window with error details instead of silently crashing and writing to the Windows Event Log</li>
