--- a/change_log_for_auto_updated.html
+++ b/change_log_for_auto_updated.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html>
 <body>
+<h2>Version 4.15.1.2</h2>
+<ul>
+	<li>Fixed some issues in gap reporting that could result in incorrect gaps or unwanted messages</li>
+	<li>Some internal speech recognition improvements</li>
+	<li>Automatically tune the speech recogniser's confidence thresholds - should improve recognition accuracy and consistency (this behaviour is enabled by default and can be disable by unchecking the 'Auto-tune speech recognition thresholds' property)</li>
+	<li>GTR2 - some plugin and VR rendering improvements</li>
+	<li>RF2 - some pit menu fixes</li>
+</ul>
 <h2>Version 4.15.1.1</h2>
 <ul>
 	<li>Added a configurable delay after releasing the speech recognition button before finishing speech recognition - may help users who tend to release the button too early ('hold button' mode only, property name 'SRE delay after button release')</li>
