--- a/public/About_ChangeLog.html
+++ b/public/About_ChangeLog.html
@@ -240,6 +240,41 @@
     </div>
     <br>
     <div style="font-family:'Lucida Sans Unicode';font-size:13px;" class="main">
+<h2>Version 4.15.1.2</h2>
+<ul>
+	<li>Fixed some issues in gap reporting that could result in incorrect gaps or unwanted messages</li>
+	<li>Some internal speech recognition improvements</li>
+	<li>Automatically tune the speech recogniser's confidence thresholds - should improve recognition accuracy and consistency (this behaviour is enabled by default and can be disable by unchecking the 'Auto-tune speech recognition thresholds' property)</li>
+	<li>GTR2 - some plugin and VR rendering improvements</li>
+	<li>RF2 - some pit menu fixes</li>
+</ul>
+<h2>Version 4.15.1.1</h2>
+<ul>
+	<li>Added a configurable delay after releasing the speech recognition button before finishing speech recognition - may help users who tend to release the button too early ('hold button' mode only, property name 'SRE delay after button release')</li>
+	<li>Allow keyboard and button assignments to trigger macro functions and extended the Macro Editor UI to support key / button assignments</li>
+	<li>Speeded up free-chat macro functions</li>
+	<li>Extended mid-stage rally stage notes correction feature to include many more call types</li>
+	<li>UI enhancements (console context menu and other stuff)</li>
+	<li>AMS2 - use separate command macros for AMS2 rather than reusing pCars2 macros</li>
+	<li>GTR2 - VR rendering enhancements and support for more message types including rolling start</li>
+	<li>RF2 - pit menu fixes</li>
+</ul>
+<h2>Version 4.15.0.6 </h2>
+<ul>
+	<li>Some error handling improvements - the app should show a popup window with error details instead of silently crashing and writing to the Windows Event Log</li>
+	<li>Command line parameter rework (note that the "RF2_64BIT" parameter has been changed to "RF2")</li>
+	<li>iRacing - some car class fixes</li>
+	<li>iRacing - fix some issues with off track penalties</li>
+</ul>
+<h2>Version 4.15.0.5</h2>
+<ul>
+	<li>Added speech recogniser debug function (enable with 'Write speech recognition debug data' property) - writes recognition information and captured audio as a .wav file to Documents/CrewChiefV4/voiceRecognitionDebug/</li>
+	<li>RBR / Dirt / Dirt 2 - fixed a few bugs in the recce pace notes parser</li>
+	<li>GTR2 - fixed missing speech recognition commands</li>
+	<li>GTR2 - fixed missing reflections in VR</li>
+	<li>RF2 - pit menu manager improvements</li>
+	<li>Minor bugfixes</li>
+</ul>
 <h2>Version 4.15.0.3</h2>
 <ul>
 	<li>Some timing accuracy improvements where opponent data is incomplete</li>
