--- a/public/VoiceRecognition_InstallationTraining.html
+++ b/public/VoiceRecognition_InstallationTraining.html
@@ -291,9 +291,9 @@
       (US users) or MSSpeech_SR_en-GB_TELE.msi (UK users).<br>
 	  If this isn't available, these language packs are
 	  also in the alternative download package linked above.<br><br>
-      Note that the app will fall back to using the Windows speech
+      Note that the app will fall back to using the Microsoft speech
       recognition engine if it can't find a working installation of the
-      Microsoft speech recognition engine.<br>
+      Windows speech recognition engine.<br>
       <br>
       
       Crew Chief will use the "Default" recording device for voice
