added missing changelog entry

--- a/change_log_for_auto_updated.html
+++ b/change_log_for_auto_updated.html
@@ -6,6 +6,7 @@
 	<li>Added option to prefer driver names over car numbers for frozen order calls (full course yellow / rolling start)</li>
 	<li>Added suspension velocity histogram data to R3E, AMS2, pCars2 and iRacing chart data (default voice command "show me suspension velocity")</li>
 	<li>Made Windows speech recognition the default</li>
+	<li>Shared memory, added phraseIsPlaying to tell if a phrase is currently being played</li>
 	<li>R3E - fixed ratings retrieval</li>
 	<li>R3E - increase app tick-rate during start lights to reduce delay in reporting countdown / green flag state to other apps</li>
 	<li>GTR2 - fix some VR rendering issues</li>
