minor help file tweak

--- a/HelpFiles/VoiceRecognition_CommandMacros.html
+++ b/HelpFiles/VoiceRecognition_CommandMacros.html
@@ -14,11 +14,10 @@
     <div style="font-family:'Lucida Sans Unicode';font-size:13px;"
       class="main">
       The app can send sequences of key presses in response to voice
-      command. These can be used for anything you like, but their
+      command or a button / key press. These can be used for anything you like, but their
       primary function is to ease the pain of navigating the awkward
       in-game pit menus. The app comes with a default set of command
-      macros which (at the time of writing) are for PCars2 and Raceroom
-      only. More will be added for other games. The default commands can
+      macros which for AMS2, iRacing, PCars2 and Raceroom. The default commands can
       be found in [install folder]/saved_command_macros.json. The app
       includes a macro edit function which allows existing macros to be
       customised and new ones created. This will create a file
@@ -78,11 +77,6 @@
         </tbody>
       </table>
       <br>
-      Ensure that there are at least <i>two</i> Pitstop Presets defined
-      (from the in-game pit menu). This is necessary because if there's
-      only one preset (or zero) the game doesn't allow the 'Pit preset'
-      menu item to be highlighted, which messes up the button press
-      sequences.<br>
       <br>
       You can request a pit stop by saying "pit request", "in this lap"
       or "box this lap". This will open the pit menu, select 'pit
