some pending update stuff

--- a/change_log_for_auto_updated.html
+++ b/change_log_for_auto_updated.html
@@ -10,6 +10,7 @@
 	<li>Some error logging improvements</li>
 	<li>Updated track landmark locations for a couple of tracks (thanks to the users who submitted these)</li>
 	<li>A few other bit & bobs</li>
+	<li>RF1 / AMS - experimental implementation of pit box in use warnings (still lots of work and testing to do here, enable this with the "Warn about opponents sharing player's pit box (RF1 / AMS 1 only)" property, note this relies on participants making practice pitstops during practice / qual)</li>
 </ul>
 <h2>Version 4.15.1.5</h2>
 <ul>
