--- a/change_log_for_auto_updated.html
+++ b/change_log_for_auto_updated.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h2>Version 4.15.2.1</h2>
+<h2>Version 4.15.2.2</h2>
 <ul>
+	<li>Updated to include hotfix for macro crash bug</li>
 	<li>Added support for Assetto Corsa rally tracks (use Assetto Corsa Rally game option) - puts the app in 'rally mode'</li>
 	<li>Added support for modifier keys in macros - prefix the key with modifier+ to hold down that modifier while typing the key (e.g. LSHIFT+KEY_X, RSHIFT+KEY_X, LCONTROL+KEY_X, ALT+KEY_X, etc)</li>
 	<li>Added an optional HOLD_TIME modifier to macro keys to specify how long that single key will be held down (e.g. "{HOLD_TIME,4000}KEY_A" hold A down for 4000 milliseconds)</li>
