remove some duplicated voice commands for tyre pressure adjustments; added ACC pit menu stuff to help

--- a/HelpFiles/VoiceRecognition_VoiceCommandsPitstopManagement.html
+++ b/HelpFiles/VoiceRecognition_VoiceCommandsPitstopManagement.html
@@ -41,8 +41,7 @@
             <td valign="top" align="center"><br>
             </td>
             <td width="10%" valign="top" align="center">X</td>
-            <td width="10%" valign="top"><br>
-            </td>
+            <td width="10%" valign="top" align="center">X</td>
           </tr>
           <tr>
             <td width="60%" valign="top">Pitstop / box fill to [X litres
@@ -72,8 +71,7 @@
             <td valign="top" align="center"><br>
             </td>
             <td width="10%" valign="top" align="center">X</td>
-            <td width="10%" valign="top"><br>
-            </td>
+            <td width="10%" valign="top" align="center">X</td>
           </tr>
           <tr>
             <td width="60%" valign="top">Pitstop / box, refuel</td>
@@ -92,8 +90,7 @@
             <td valign="top" align="center">X</td>
             <td width="10%" valign="top" align="center"><br>
             </td>
-            <td width="10%" valign="top"><br>
-            </td>
+            <td width="10%" valign="top" align="center">X</td>
           </tr>
           <tr>
             <td width="60%" valign="top">Fuel to the end / fuel to the
@@ -104,8 +101,7 @@
             </td>
             <td width="10%" valign="top" align="center"><br>
             </td>
-            <td width="10%" valign="top"><br>
-            </td>
+            <td width="10%" valign="top" align="center">X</td>
           </tr>
           <tr>
             <td width="60%" valign="top">Add fuel [X litres]</td>
@@ -115,8 +111,7 @@
             </td>
             <td width="10%" valign="top" align="center"><br>
             </td>
-            <td width="10%" valign="top"><br>
-            </td>
+            <td width="10%" valign="top" align="center">X</td>
           </tr>
         </tbody>
       </table>
@@ -151,7 +146,7 @@
             </td>
             <td valign="top" align="center">X<br>
             </td>
-            <td width="10%" valign="top" align="center"><br>
+            <td valign="top" align="center">X<br>
             </td>
           </tr>
           <tr>
@@ -163,7 +158,7 @@
             </td>
             <td valign="top" align="center">X<br>
             </td>
-            <td width="10%" valign="top" align="center"><br>
+            <td valign="top" align="center">X<br>
             </td>
           </tr>
           <tr>
@@ -391,6 +386,17 @@
             </td>
           </tr>
           <tr>
+            <td width="60%" valign="top">Pitstop / box, dry tyres</td>
+            <td valign="top" align="center"><br>
+            </td>
+            <td valign="top" align="center"><br>
+            </td>
+            <td valign="top" align="center"><br>
+            </td>
+            <td valign="top" align="center">X<br>
+            </td>
+          </tr>
+          <tr>
             <td width="60%" valign="top">Pitstop / box, wet tyres</td>
             <td valign="top" align="center"><br>
             </td>
@@ -398,7 +404,7 @@
             </td>
             <td valign="top" align="center">X<br>
             </td>
-            <td width="10%" valign="top" align="center"><br>
+            <td valign="top" align="center">X<br>
             </td>
           </tr>
           <tr>
@@ -413,7 +419,19 @@
             </td>
           </tr>
           <tr>
-            <td width="60%" valign="top">Pitstop change tyres pressure [
+            <td width="60%" valign="top">Pitstop / box tyre set [
+              new value ]</td>
+            <td valign="top" align="center"><br>
+            </td>
+            <td valign="top" align="center"><br>
+            </td>
+            <td valign="top" align="center"><br>
+            </td>
+            <td valign="top" align="center">X<br>
+            </td>
+          </tr>
+          <tr>
+            <td width="60%" valign="top">Pitstop / box change tyre pressures [
               new value ]</td>
             <td valign="top" align="center">X<br>
             </td>
@@ -421,11 +439,35 @@
             </td>
             <td valign="top" align="center"><br>
             </td>
-            <td width="10%" valign="top" align="center"><br>
+            <td valign="top" align="center">X<br>
             </td>
           </tr>
           <tr>
-            <td width="60%" valign="top">Pitstop change left front tyre
+            <td width="60%" valign="top">Pitstop / box change front tyre pressures [
+              new value ]</td>
+            <td valign="top" align="center"><br>
+            </td>
+            <td valign="top" align="center"><br>
+            </td>
+            <td valign="top" align="center"><br>
+            </td>
+            <td valign="top" align="center">X<br>
+            </td>
+          </tr>
+          <tr>
+            <td width="60%" valign="top">Pitstop / box change rear tyre pressures [
+              new value ]</td>
+            <td valign="top" align="center"><br>
+            </td>
+            <td valign="top" align="center"><br>
+            </td>
+            <td valign="top" align="center"><br>
+            </td>
+            <td valign="top" align="center">X<br>
+            </td>
+          </tr>
+          <tr>
+            <td width="60%" valign="top">Pitstop / box change left front tyre
               pressure [ new value ]</td>
             <td valign="top" align="center">X<br>
             </td>
@@ -433,11 +475,11 @@
             </td>
             <td valign="top" align="center"><br>
             </td>
-            <td width="10%" valign="top" align="center"><br>
+            <td valign="top" align="center">X<br>
             </td>
           </tr>
           <tr>
-            <td width="60%" valign="top">Pitstop change right front tyre
+            <td width="60%" valign="top">Pitstop  / boxchange right front tyre
               pressure [ new value ]</td>
             <td valign="top" align="center">X<br>
             </td>
@@ -445,11 +487,11 @@
             </td>
             <td valign="top" align="center"><br>
             </td>
-            <td width="10%" valign="top" align="center"><br>
+            <td valign="top" align="center">X<br>
             </td>
           </tr>
           <tr>
-            <td width="60%" valign="top">Pitstop change left rear tyre
+            <td width="60%" valign="top">Pitstop / box change left rear tyre
               pressure [ new value ]</td>
             <td valign="top" align="center">X<br>
             </td>
@@ -457,11 +499,11 @@
             </td>
             <td valign="top" align="center"><br>
             </td>
-            <td width="10%" valign="top" align="center"><br>
+            <td valign="top" align="center">X<br>
             </td>
           </tr>
           <tr>
-            <td width="60%" valign="top">Pitstop change right rear tyre
+            <td width="60%" valign="top">Pitstop / box change right rear tyre
               pressure [ new value ]</td>
             <td valign="top" align="center">X<br>
             </td>
@@ -469,7 +511,7 @@
             </td>
             <td valign="top" align="center"><br>
             </td>
-            <td width="10%" valign="top" align="center"><br>
+            <td valign="top" align="center">X<br>
             </td>
           </tr>
         </tbody>
